Add: week progression

--- a/src/mgf.html
+++ b/src/mgf.html
@@ -31,28 +31,16 @@
                             <td class="col-md-9" id="herb">20</td>
                         </tr>
                         <tr class="row">
-                            <th scope="row" class="col-md-3">Roots:</th>
-                            <td class="col-md-9" id="root">20</td>
-                        </tr>
-                        <tr class="row">
-                            <th scope="row" class="col-md-3">Nuts:</th>
-                            <td class="col-md-9" id="nut">20</td>
-                        </tr>
-                        <tr class="row">
-                            <th scope="row" class="col-md-3">Fruits:</th>
-                            <td class="col-md-9" id="fruit">20</td>
-                        </tr>
-                        <tr class="row">
-                            <th scope="row" class="col-md-3">Grains:</th>
-                            <td class="col-md-9" id="grain">20</td>
+                            <th scope="row" class="col-md-3">Food:</th>
+                            <td class="col-md-9" id="food">20</td>
                         </tr>
                         <tr class="row">
                             <th scope="row" class="col-md-3">Cut stone:</th>
                             <td class="col-md-9" id="stone">20</td>
                         </tr>
                         <tr class="row">
-                            <th scope="row" class="col-md-3">Meat:</th>
-                            <td class="col-md-9" id="meat">20</td>
+                            <th scope="row" class="col-md-3">Cut wood:</th>
+                            <td class="col-md-9" id="wood">20</td>
                         </tr>
                         <tr class="row">
                             <th scope="row" class="col-md-3">Iron:</th>
@@ -113,6 +101,7 @@
                     </table>
 
                 </div>
+                <button class="btn-primary btn" onclick="nextWeek();">Next week</button>
             </div>
         <!--</div>-->
         <div class="navbar navbar-fixed-bottom">
