--- a/src/mgf.html
+++ b/src/mgf.html
@@ -11,6 +11,7 @@
     <script src="js/vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="js/vendor/lodash.core.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/triggers.js"></script>
 
 </head>
 <body onload="init();">
