Add restart function after game over

--- a/src/mgf.html
+++ b/src/mgf.html
@@ -113,7 +113,7 @@
         <div class="text-center">
             <h1 class="game-over-text">GAME OVER</h1>
             <h2 id="cause-of-death">Your population died of famine!</h2>
-            <button class="btn btn-success btn-restart">Try again</button>
+            <button class="btn btn-success btn-restart" onclick="resetGame();">Try again</button>
         </div>
         <div id="dialog_bottom_panel"></div>
         <div id="character1"></div>
