--- a/src/mgf.html
+++ b/src/mgf.html
@@ -12,6 +12,7 @@
     <script src="js/vendor/lodash.core.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/triggers.js"></script>
+    <script src="js/labors.js"></script>
 
 </head>
 <body onload="init();">
@@ -83,7 +84,7 @@
                         <td class="col-md-9"><input id="lb" type="number" value="0" min="0"></td>
                     </tr>
                     <tr id="gatherer" class="row">
-                        <th scope="row" class="col-md-3"><label for="lg">Gatherers:</label></th>
+                        <th scope="row" class="col-md-3"><label for="lg">Hunter/Gatherers:</label></th>
                         <td class="col-md-9"><input id="lg" type="number" value="0" min="0"></td>
                     </tr>
                     <tr id="scientist" class="row">
