Add lumberjack, Remove hunter, Fix newWeek function

--- a/src/mgf.html
+++ b/src/mgf.html
@@ -87,6 +87,10 @@
                         <th scope="row" class="col-md-3"><label for="lg">Hunter/Gatherers:</label></th>
                         <td class="col-md-9"><input id="lg" type="number" value="0" min="0"></td>
                     </tr>
+                    <tr id="lumberjack" class="row">
+                        <th scope="row" class="col-md-3"><label for="lh">Lumberjacks:</label></th>
+                        <td class="col-md-9"><input id="lh" type="number" value="0" min="0"></td>
+                    </tr>
                     <tr id="scientist" class="row">
                         <th scope="row" class="col-md-3"><label for="ls">Scientists:</label></th>
                         <td class="col-md-9"><input id="ls" type="number" value="0" min="0"></td>
@@ -94,10 +98,6 @@
                     <tr id="miner" class="row">
                         <th scope="row" class="col-md-3"><label for="lm">Miners:</label></th>
                         <td class="col-md-9"><input id="lm" type="number" value="0" min="0"></td>
-                    </tr>
-                    <tr id="hunter" class="row">
-                        <th scope="row" class="col-md-3"><label for="lh">Hunters:</label></th>
-                        <td class="col-md-9"><input id="lh" type="number" value="0" min="0"></td>
                     </tr>
                     <tr id="guard" class="row">
                         <th scope="row" class="col-md-3"><label for="lgu">Guards:</label></th>
