Rename nextWeek for nextSeason

--- a/src/mgf.html
+++ b/src/mgf.html
@@ -27,7 +27,7 @@
                 </button>
                 <div class="col-md-6"></div>
             </div>
-            <button class="btn-primary btn top-btn" onclick="nextWeek();">Next season</button>
+            <button class="btn-primary btn top-btn" onclick="nextSeason();">Next season</button>
             <div id="stock">
                 <table class="table">
                     <caption class="sighted-invisible">Stocks report</caption>
