Fix labor game out of sync, Add spring raid event
On labor change out of sync with game value.
Game variable replaced by global g on browser events.

--- a/src/mgf.html
+++ b/src/mgf.html
@@ -19,6 +19,7 @@
 <div class="site-wrapper">
     <noscript>Yep, you need javascript to play the game</noscript>
     <div class="container" id="game">
+        <h1 class="season-header">autumn</h1>
         <div id="screens">
             <div class="row">
                 <button class="col-md-3 btn btn-default active" onclick="changeTab('stock');" id="btn-stock">Resources
