WIP kill workers

--- a/src/mgf.html
+++ b/src/mgf.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="js/vendor/bootstrap/css/bootstrap-theme.min.css">
     <script src="js/vendor/jquery-2.2.1.min.js"></script>
     <script src="js/vendor/bootstrap/js/bootstrap.min.js"></script>
-    <script src="js/vendor/lodash.core.min.js"></script>
+    <script src="js/vendor/lodash.js"></script>
     <script src="js/main.js"></script>
     <script src="js/triggers.js"></script>
     <script src="js/labors.js"></script>
