Refactor triggers to use generic functions. Add herb triggers.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="js/main.js"></script>
     <script src="js/triggers.js"></script>
     <script src="js/labors.js"></script>
+    <script src="js/upkeep.js"></script>
 
 </head>
 <body onload="init();">
@@ -87,7 +88,7 @@
     <div id="game-over-screen" class="dialog-screen">
         <div class="text-center">
             <h1 class="game-over-text">GAME OVER</h1>
-            <h2 id="cause-of-death">Your population died of famine!</h2>
+            <h2 id="cause-of-death"></h2>
             <button class="btn btn-success btn-restart" onclick="resetGame();">Try again</button>
         </div>
     </div>
