Add cost yield for each job

--- a/index.html
+++ b/index.html
@@ -55,10 +55,7 @@
                         <span class="col-md-3">20</span>
                         <span class="col-md-3 yield"></span>
                         <div class="col-md-3 upkeep">
-                            <button class="col-md-3 btn btn-link"  data-toggle="popover" title="Expected Consumption"
-                                    data-content="Food: 10.00, Herb 4.00, Wood: 4.00" data-placement="bottom">
-                                &#x1F4C9
-                            </button>
+                            Food: 1.0, Herb 0.2, Wood: 0.2
                         </div>
                     </div>
                     <div id="workerIdle" class="row">
