Add credits at the reset bar

--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
                 </div>
             </div>
         </div>
-        <div id="reset-bar" class="navbar navbar-fixed-bottom hidden">
+        <div id="reset-bar" class="navbar navbar-fixed-bottom hidden text-center">
+            <span class="text-center credits">
+                Made with ♥ by <a href="https://podricing.pw/u/new_feh" target="_newtab">Feh</a>
+            </span>
             <button onclick="resetGame();" class="btn btn-danger reset-btn">Reset game</button>
         </div>
     </div>
