--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <button class="btn btn-success btn-restart" onclick="resetGame();">Try again</button>
         </div>
     </div>
-    <div id="report-screen" class="dialog-screen">
+    <div id="report-screen" class="dialog-screen" onclick="nextEvent();">
         <div>
             <img id="character1" src="img/assistant.svg"/>
             <div id="character2"></div>
@@ -91,7 +91,10 @@
                 <div class="char-name">Assistant</div>
                 <div>
                     <div id="dialog-message">This is a sample message.</div>
-                    <button id="next" class="btn btn-primary" onclick="nextEvent();">&gt;&gt;&gt;</button>
+                    <div class="click-to-continue">
+                        <div>Click anywhere to continue</div>
+                    </div>
+                    <!--<button id="next" class="btn btn-primary" onclick="nextEvent();">&gt;&gt;&gt;</button>-->
                 </div>
             </div>
         </div>
@@ -100,7 +103,6 @@
         <div class="vertical-center text-center">
             <div class="column-direction">
                 <h1 class="loading-text">Please wait while the game is loading</h1>
-                <!--<img draggable="false" src="img/ajax-loader.gif">-->
                 <div class="loading-symbol"></div>
                 <h2>Built with ♥ by <a href="https://podricing.pw/u/new_feh" target="_newtab">Feh</a></h2>
             </div>
