Add github link to the credits

--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
         </div>
         <div id="reset-bar" class="navbar navbar-fixed-bottom hidden text-center">
             <span class="text-center credits">
-                Made with ♥ by <a href="https://podricing.pw/u/new_feh" target="_newtab">Feh</a>
             </span>
             <button onclick="resetGame();" class="btn btn-danger reset-btn">Reset game</button>
         </div>
@@ -104,7 +103,13 @@
             <div class="column-direction">
                 <h1 class="loading-text">Please wait while the game is loading</h1>
                 <div class="loading-symbol"></div>
-                <h2>Built with ♥ by <a href="https://podricing.pw/u/new_feh" target="_newtab">Feh</a></h2>
+                <h2>
+                    <span id="credits">Built with ♥ by <a href="https://podricing.pw/u/new_feh" target="_newtab">Feh</a> at
+                        <a href="https://github.com/marceloslacerda/glowing-palm-tree" target="_newtab">
+                            <img src="img/GitHub-Mark-32px.png">
+                        </a>
+                    </span>
+                </h2>
             </div>
         </div>
     </div>
